# fluids3

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  scene.xml
common/: app_directx.h  app_opengl.h  app_perf.h  app_util.cpp  app_util.h  glad.tgz  pugixml-1.14.tgz  xml_settings.cpp  xml_settings.h
fluids/: fluid_system.cpp  fluid_system.cu  fluid_system_host.cu  fluid_system_kern.cuh
